--- a/manage_breast_screening/core/jinja2/components/appointment-header/template.jinja
+++ b/manage_breast_screening/core/jinja2/components/appointment-header/template.jinja
@@ -5,7 +5,7 @@
 
 <p>{{ clinic_slot.slot_time_and_clinic_date }}{% if not appointment.current_status.is_screened %}<span class="nhsuk-u-margin-left-3"><a href="#">Reschedule appointment</a></span>{% endif %}</p>
 
-{% if not appointment.is_special_appointment and not appointment.current_status.is_screened %}
+{% if appointment.can_be_made_special %}
 <p><a href="{{ appointment.special_appointment_url }}">Make special appointment</a></p>
 {% endif %}
 
