refactor: extract css for special appointment banner

--- a/manage_breast_screening/assets/sass/main.scss
+++ b/manage_breast_screening/assets/sass/main.scss
@@ -6,6 +6,7 @@
 @import "components/count";
 @import "components/appointment-status";
 @import "components/secondary-navigation";
+@import "components/special-appointment-banner";
 
 h1 {
   @extend %nhsuk-heading-l;
