--- a/manage_breast_screening/mammograms/jinja2/mammograms/special_appointments/special_appointment_banner.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/special_appointments/special_appointment_banner.jinja
@@ -10,12 +10,12 @@
         {% if reason.details %}
           {% set value_content = reason.details %}
         {% else %}
-          {% set value_content = "<span style=\"color: var(--nhsuk-secondary-text-color);\">No details provided</span>" %}
+          {% set value_content = "<span class=\"special-appointment-banner__no-details\">No details provided</span>" %}
         {% endif %}
 
         {# Add temporary tag to the value content if needed #}
         {% if reason.temporary %}
-          {% set value_content = value_content + "<br><span class=\"nhsuk-tag nhsuk-tag--white nhsuk-u-margin-top-2\">Temporary</span>" %}
+          {% set value_content = value_content + "<br><span class=\"special-appointment-banner__temporary\">Temporary</span>" %}
         {% endif %}
 
         {# Add row for this support reason #}
@@ -30,10 +30,10 @@
       {% endfor %}
       {{ summaryList({
         "rows": rows,
-        "classes": summaryListClasses if summaryListClasses else "nhsuk-summary-list"
+        "classes": "special-appointment-banner"
       }) }}
       {% if show_change_link %}
-        <div style="text-align: right;">
+        <div class="special-appointment-banner__action">
           <a href="{{ presented_special_appointment.change_url }}" style="font-size: 19px;">Change<span class="nhsuk-u-visually-hidden"> special appointment requirements</span></a>
         </div>
       {% endif %}
