--- a/manage_breast_screening/core/jinja2/components/appointment-status/template.jinja
+++ b/manage_breast_screening/core/jinja2/components/appointment-status/template.jinja
@@ -13,7 +13,7 @@
     {% set action_url = check_in_url or url('mammograms:check_in', kwargs={'pk': appointment.pk}) %}
     <form action="{{ action_url }}" method="post" novalidate>
       <p class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-0">
-        <button class="app-button--link">Check in {{ appointment.participant.full_name }}</button>
+        <button class="app-button--link">Check in<span class="nhsuk-u-visually-hidden"> {{ appointment.participant.full_name }}</span></button>
       </p>
       {{ csrf_input }}
     </form>
