tests: unit tests for template components

--- a/manage_breast_screening/participants/jinja2/components/participant-details/contact_details.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/contact_details.jinja
@@ -7,7 +7,7 @@
       {% for line in presented_participant.address.lines %}
         {{ line }}<br>
       {% endfor %}
-      {{ address.postcode }}
+      {{ presented_participant.address.postcode }}
     {% endif %}
   {% endset %}
   {% call card({
