--- a/manage_breast_screening/core/jinja2/forms/input.jinja
+++ b/manage_breast_screening/core/jinja2/forms/input.jinja
@@ -1,5 +1,6 @@
 {% from "input/macro.jinja" import input %}
 {% set unbound_field = field.field %}
+{% set widget = unbound_field.widget %}
 {% set input_params = {
     "label": {
       "text": field.label,
@@ -11,7 +12,8 @@
     "id": field.auto_id,
     "name": field.html_name,
     "value": field.value() or "",
-    "classes": unbound_field.classes if unbound_field.classes
+    "classes": unbound_field.classes if unbound_field.classes,
+    "attributes": widget.attrs,
   } %}
   {% if field.errors %}
     {% set error_params = {
