--- a/manage_breast_screening/core/jinja2/forms/textarea.jinja
+++ b/manage_breast_screening/core/jinja2/forms/textarea.jinja
@@ -13,9 +13,9 @@
     "name": field.html_name,
     "value": field.value() or "",
     "classes": unbound_field.classes if unbound_field.classes,
-    "rows": widget.attrs["rows"],
-    "cols": widget.attrs["cols"],
-    "autocomplete": widget.attrs["autocomplete"]
+    "rows": widget.attrs.pop("rows", none),
+    "cols": widget.attrs.pop("cols", none),
+    "attributes": widget.attrs
   } %}
   {% if field.errors %}
     {% set error_params = {
