support other subclasses of the Input widget
e.g. TelInput, EmailInput, SearchInput etc. These just change the type
param.

--- a/manage_breast_screening/core/jinja2/forms/input.jinja
+++ b/manage_breast_screening/core/jinja2/forms/input.jinja
@@ -14,6 +14,7 @@
     "value": field.value() or "",
     "classes": unbound_field.classes if unbound_field.classes,
     "attributes": widget.attrs,
+    "type": widget.input_type
   } %}
   {% if field.errors %}
     {% set error_params = {
