--- a/manage_breast_screening/mammograms/jinja2/mammograms/special_appointments/provide_special_appointment_details.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/special_appointments/provide_special_appointment_details.jinja
@@ -2,7 +2,6 @@
 {% from 'checkboxes/macro.jinja' import checkboxes %}
 {% from 'back-link/macro.jinja' import backLink %}
 {% from 'button/macro.jinja' import button %}
-{% from 'django_form_helpers.jinja' import app_radios %}
 
 {% block form %}
   {% set checkbox_items = [] %}
@@ -40,7 +39,7 @@
     "items": checkbox_items
   }) }}
 
-  {{ app_radios(form_attribute=form.any_temporary, legend="Are any of these reasons temporary?", hint="This includes issues that are likely to be resolved by their next mammogram, for example a broken foot or a short-term eye problem.") }}
+  {{ form.any_temporary.as_field_group() }}
 
   <div class="nhsuk-button-group">
     {{ button({
