--- a/manage_breast_screening/mammograms/jinja2/mammograms/special_appointments/provide_special_appointment_details.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/special_appointments/provide_special_appointment_details.jinja
@@ -1,43 +1,12 @@
-{% extends 'layout-form.jinja' %}
-{% from 'checkboxes/macro.jinja' import checkboxes %}
-{% from 'back-link/macro.jinja' import backLink %}
-{% from 'button/macro.jinja' import button %}
+{% extends "layout-form.jinja" %}
+{% from "button/macro.jinja" import button %}
 
 {% block form %}
-  {% set checkbox_items = [] %}
-
-  {% for value, label in form.support_reasons.field.choices %}
-      {% set hint = form.SupportReasonHints[value] %}
-
-      {% do checkbox_items.append({
-        "text": label,
-        "id": form.support_reasons.auto_id if loop.first,
-        "value": value,
-        "checked": value in (form.support_reasons.value() or []),
-        "conditional": {
-          "html": form[value.lower() + '_details'].as_field_group()
-        }
-      }) %}
+  {% for option in form.SupportReasons %}
+    {% do form.support_reasons.add_conditional_html(option.value, form[option.value.lower() + "_details"].as_field_group()) %}
   {% endfor %}
 
-  {% if form.support_reasons.errors %}
-    {% set error_message = {"text": form.support_reasons.errors | first} %}
-  {% endif %}
-
-  {{ checkboxes({
-    "name": form.support_reasons.html_name,
-    "errorMessage": error_message,
-    "fieldset": {
-      "legend": {
-        "text": support_reasons_legend,
-        "classes": "nhsuk-fieldset__legend--m"
-      }
-    },
-    "hint": {
-      "text": "Select all that apply. When describing support required, include any special requests made by the participant or their carer."
-    },
-    "items": checkbox_items
-  }) }}
+  {{ form.support_reasons.as_field_group() }}
 
   {{ form.any_temporary.as_field_group() }}
 
