delint participant-details templates
For the time being, there are additional djlint issues that need
correcting, but I'll fix them in a separate PR.

--- a/manage_breast_screening/participants/jinja2/components/participant-details/appointments.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/appointments.jinja
@@ -1,5 +1,5 @@
-{% from 'card/macro.jinja' import card %}
-{% from 'tag/macro.jinja' import tag %}
+{% from "card/macro.jinja" import card %}
+{% from "tag/macro.jinja" import tag %}
 
 {% macro appointment_table(presented_appointments, testid) %}
   <table class="nhsuk-table" data-testid="{{ testid }}">
