--- a/manage_breast_screening/participants/jinja2/components/participant-details/screening_details.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/screening_details.jinja
@@ -1,5 +1,5 @@
-{% from 'card/macro.jinja' import card %}
-{% from 'summary-list/macro.jinja' import summaryList %}
+{% from "card/macro.jinja" import card %}
+{% from "summary-list/macro.jinja" import summaryList %}
 
 {% macro screening_details(presented_mammograms, screening_protocol) %}
   {% set mammograms_by_date_added = presented_mammograms.last_known_mammograms %}
@@ -9,7 +9,7 @@
       {% for mammogram in mammograms_by_date_added %}
         <p>
         <span class="nhsuk-u-font-weight-bold">Added {{ mammogram.date_added }}</span>
-        <br>{% if mammogram.date.is_exact %}{{mammogram.date.absolute}} <span class="app-text-grey">({{mammogram.date.relative}})</span>{% else %}{{ mammogram.date.value }}{% endif %}
+        <br>{% if mammogram.date.is_exact %}{{ mammogram.date.absolute }} <span class="app-text-grey">({{ mammogram.date.relative }})</span>{% else %}{{ mammogram.date.value }}{% endif %}
         <br>{{ mammogram.location }}
 
         {% if mammogram.different_name %}
