--- a/manage_breast_screening/participants/jinja2/components/participant-details/template.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/template.jinja
@@ -1,4 +1,4 @@
-{% from 'summary-list/macro.jinja' import summaryList %}
+{% from "summary-list/macro.jinja" import summaryList %}
 
 {% set dob %}
   {{ presented_participant.date_of_birth }}<br>
@@ -48,7 +48,7 @@
     {% for mammogram in mammograms_by_date_added %}
       <p>
       <span class="nhsuk-u-font-weight-bold">Added {{ mammogram.date_added }}</span>
-      <br>{% if mammogram.date.is_exact %}{{mammogram.date.absolute}} <span class="app-text-grey">({{mammogram.date.relative}})</span>{% else %}{{ mammogram.date.value }}{% endif %}
+      <br>{% if mammogram.date.is_exact %}{{ mammogram.date.absolute }} <span class="app-text-grey">({{ mammogram.date.relative }})</span>{% else %}{{ mammogram.date.value }}{% endif %}
       <br>{{ mammogram.location }}
 
       {% if mammogram.different_name %}
