refactor: remove app-text-grey class
This is redundant - we can use the classes from the design system
instead.

--- a/manage_breast_screening/clinics/jinja2/clinics/show.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/show.jinja
@@ -50,7 +50,7 @@
           {{ presented_appointment.participant.full_name }}
         </a>
       </p>
-      <p class="app-text-grey nhsuk-u-margin-bottom-0">
+      <p class="nhsuk-u-secondary-text-color nhsuk-u-margin-bottom-0">
         NHS:  {{ presented_appointment.participant.nhs_number }}
       </p>
     {% endset %}
