Add basic dev sign in functionality
- Add an auth app
- Add a single entry point for authentication, which provides the dev
  sign in now and can provide access to the CIS2 auth flow when it's
  implemented later
- Implement a dev sign in mode

Currently the dev sign in simply authenticates the first user in the
database. This can be iterated upon to develop a persona-based auth
system for non-prod environments.

--- a/manage_breast_screening/core/jinja2/layout-app.jinja
+++ b/manage_breast_screening/core/jinja2/layout-app.jinja
@@ -25,6 +25,11 @@
         "url": "/clinics/",
         "label": "Clinics",
         'current': true if navActive == "clinics"
+      },
+      {
+        "url": url('auth:sign_out') if request and request.user.is_authenticated else url('auth:sign_in'),
+        "label": "Sign out" if request and request.user.is_authenticated else "Sign in",
+        'current': true if navActive == "sign_in"
       }
     ]
   }) }}
