Add initial config for CIS2 authentication
A basic configuration for authenticating this service against CIS2.
Includes:

- env vars needed to set up an OIDC client written using Authlib
- urls and views to handle the authentication flow

--- a/manage_breast_screening/auth/jinja2/auth/sign_in.jinja
+++ b/manage_breast_screening/auth/jinja2/auth/sign_in.jinja
@@ -5,9 +5,9 @@
   <div class="nhsuk-grid-column-two-thirds">
     <h1 class="nhsuk-heading-l">Sign in</h1>
 
-    <button class="nhsuk-button nhsuk-button--secondary" type="button" disabled>
-      Sign in with CIS2 (coming soon)
-    </button>
+    <a class="nhsuk-button nhsuk-button--secondary" href="{{ url('auth:cis2_sign_in') }}">
+      Sign in with CIS2
+    </a>
   </div>
 </div>
 {% endblock %}
