DO NOT MERGE - DEMO COMMIT

--- a/manage_breast_screening/core/jinja2/layout-app.jinja
+++ b/manage_breast_screening/core/jinja2/layout-app.jinja
@@ -11,7 +11,7 @@
 {% block header %}
   {{ header({
     "service": {
-      "name": "Manage breast screening"
+      "name": "Manage breast screening REVIEW APP"
     },
     "account": {
       "items": header_account_items(request.user)
