--- a/manage_breast_screening/clinics/jinja2/clinics/show.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/show.jinja
@@ -1,8 +1,8 @@
 {% extends 'layout-app.jinja' %}
 
-{% from 'back-link/macro.jinja' import backLink %}
-{% from 'tables/macro.jinja' import table %}
-{% from 'tag/macro.jinja' import tag %}
+{% from 'nhsuk/components/back-link/macro.jinja' import backLink %}
+{% from 'nhsuk/components/tables/macro.jinja' import table %}
+{% from 'nhsuk/components/tag/macro.jinja' import tag %}
 {% from 'components/count/macro.jinja' import appCount %}
 {% from 'components/secondary-navigation/macro.jinja' import app_secondary_navigation %}
 {% from 'components/appointment-status/macro.jinja' import appointment_status %}
