--- a/manage_breast_screening/core/jinja2/django_form_helpers.jinja
+++ b/manage_breast_screening/core/jinja2/django_form_helpers.jinja
@@ -1,4 +1,4 @@
-{% from 'error-summary/macro.jinja' import errorSummary %}
+{% from 'nhsuk/components/error-summary/macro.jinja' import errorSummary %}
 
 {% macro form_error_summary(form, title="There is a problem") %}
     {% if form.errors %}
