--- a/manage_breast_screening/core/jinja2/forms/input.jinja
+++ b/manage_breast_screening/core/jinja2/forms/input.jinja
@@ -1,4 +1,4 @@
-{% from "input/macro.jinja" import input %}
+{% from "nhsuk/components/input/macro.jinja" import input %}
 {% set unbound_field = field.field %}
 {% set widget = unbound_field.widget %}
 {% set input_params = {
