--- a/manage_breast_screening/core/jinja2/layout-form.jinja
+++ b/manage_breast_screening/core/jinja2/layout-form.jinja
@@ -1,5 +1,5 @@
 {% extends 'layout-app.jinja' %}
-{% from 'back-link/macro.jinja' import backLink %}
+{% from 'nhsuk/components/back-link/macro.jinja' import backLink %}
 {% from 'django_form_helpers.jinja' import form_error_summary %}
 
 {% block beforeContent %}
