--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -1,7 +1,7 @@
 {% extends "wizard_step.jinja" %}
-{% from "card/macro.jinja" import card %}
-{% from "inset-text/macro.jinja" import insetText %}
-{% from "summary-list/macro.jinja" import summaryList %}
+{% from "nhsuk/components/card/macro.jinja" import card %}
+{% from "nhsuk/components/inset-text/macro.jinja" import insetText %}
+{% from "nhsuk/components/summary-list/macro.jinja" import summaryList %}
 
 {% block step_content %}
 
