--- a/manage_breast_screening/mammograms/jinja2/mammograms/start_screening.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/start_screening.jinja
@@ -1,6 +1,6 @@
 {% extends "wizard_step.jinja" %}
-{% from 'card/macro.jinja' import card %}
-{% from 'warning-callout/macro.jinja' import warningCallout %}
+{% from 'nhsuk/components/card/macro.jinja' import card %}
+{% from 'nhsuk/components/warning-callout/macro.jinja' import warningCallout %}
 {% from 'components/appointment-status/macro.jinja' import appointment_status %}
 {% from 'components/appointment-header/macro.jinja' import appointment_header %}
 {% from 'components/participant-details/macro.jinja' import participant_details %}
