--- a/manage_breast_screening/participants/jinja2/components/participant-details/contact_details.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/contact_details.jinja
@@ -1,5 +1,5 @@
-{% from "card/macro.jinja" import card %}
-{% from "summary-list/macro.jinja" import summaryList %}
+{% from "nhsuk/components/card/macro.jinja" import card %}
+{% from "nhsuk/components/summary-list/macro.jinja" import summaryList %}
 
 {% macro contact_details(presented_participant) %}
   {% set address_html %}
