--- a/manage_breast_screening/participants/jinja2/edit_ethnicity.jinja
+++ b/manage_breast_screening/participants/jinja2/edit_ethnicity.jinja
@@ -1,8 +1,8 @@
 {% extends 'layout-app.jinja' %}
-{% from 'back-link/macro.jinja' import backLink %}
-{% from 'radios/macro.jinja' import radios %}
-{% from 'button/macro.jinja' import button %}
-{% from 'fieldset/macro.jinja' import fieldset %}
+{% from 'nhsuk/components/back-link/macro.jinja' import backLink %}
+{% from 'nhsuk/components/radios/macro.jinja' import radios %}
+{% from 'nhsuk/components/button/macro.jinja' import button %}
+{% from 'nhsuk/components/fieldset/macro.jinja' import fieldset %}
 
 {% from 'django_form_helpers.jinja' import form_error_summary %}
 
