--- a/manage_breast_screening/participants/jinja2/participants/add_previous_mammogram.jinja
+++ b/manage_breast_screening/participants/jinja2/participants/add_previous_mammogram.jinja
@@ -1,6 +1,6 @@
 {% extends "layout-app.jinja" %}
-{% from "button/macro.jinja" import button %}
-{% from "back-link/macro.jinja" import backLink %}
+{% from "nhsuk/components/button/macro.jinja" import button %}
+{% from "nhsuk/components/back-link/macro.jinja" import backLink %}
 
 {% from "django_form_helpers.jinja" import form_error_summary, app_date_input %}
 
