--- a/manage_breast_screening/auth/jinja2/auth/persona_sign_in.jinja
+++ b/manage_breast_screening/auth/jinja2/auth/persona_sign_in.jinja
@@ -1,5 +1,5 @@
 {% extends 'layout-app.jinja' %}
-{% from "button/macro.jinja" import button %}
+{% from "nhsuk/components/button/macro.jinja" import button %}
 
 {% block page_content %}
 <div class="nhsuk-grid-row">
