--- a/manage_breast_screening/core/jinja2/forms/split_date_field.jinja
+++ b/manage_breast_screening/core/jinja2/forms/split_date_field.jinja
@@ -1,4 +1,4 @@
-{% from 'date-input/macro.jinja' import dateInput as dateInput %}
+{% from 'nhsuk/components/date-input/macro.jinja' import dateInput as dateInput %}
 {% if field.errors %}
   {% set error_message = {"text": field.errors | first} %}
 {% endif %}
