--- a/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_details.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_details.jinja
@@ -1,7 +1,7 @@
 {% extends 'layout-app.jinja' %}
-{% from 'card/macro.jinja' import card %}
-{% from 'warning-callout/macro.jinja' import warningCallout %}
-{% from 'back-link/macro.jinja' import backLink %}
+{% from 'nhsuk/components/card/macro.jinja' import card %}
+{% from 'nhsuk/components/warning-callout/macro.jinja' import warningCallout %}
+{% from 'nhsuk/components/back-link/macro.jinja' import backLink %}
 {% from 'components/appointment-status/macro.jinja' import appointment_status %}
 {% from 'components/appointment-header/macro.jinja' import appointment_header %}
 {% from 'components/participant-details/macro.jinja' import participant_details %}
