--- a/manage_breast_screening/mammograms/jinja2/mammograms/special_appointments/provide_special_appointment_details.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/special_appointments/provide_special_appointment_details.jinja
@@ -1,5 +1,5 @@
 {% extends "layout-form.jinja" %}
-{% from "button/macro.jinja" import button %}
+{% from "nhsuk/components/button/macro.jinja" import button %}
 
 {% block form %}
   {% for option in form.SupportReasons %}
