--- a/manage_breast_screening/participants/jinja2/components/participant-details/appointments.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/appointments.jinja
@@ -1,5 +1,5 @@
-{% from "card/macro.jinja" import card %}
-{% from "tag/macro.jinja" import tag %}
+{% from "nhsuk/components/card/macro.jinja" import card %}
+{% from "nhsuk/components/tag/macro.jinja" import tag %}
 
 {% macro appointment_table(presented_appointments, testid) %}
   <table class="nhsuk-table" data-testid="{{ testid }}">
