--- a/manage_breast_screening/participants/jinja2/components/participant-details/personal_details.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/personal_details.jinja
@@ -1,5 +1,5 @@
-{% from "card/macro.jinja" import card %}
-{% from "summary-list/macro.jinja" import summaryList %}
+{% from "nhsuk/components/card/macro.jinja" import card %}
+{% from "nhsuk/components/summary-list/macro.jinja" import summaryList %}
 
 {% macro personal_details(presented_participant, return_url) %}
 {% set dob %}
